plugins {
  id 'java'
  id 'application'
}

application {
  mainClassName = 'tech.bison.trainee2021.SoccerTableStats.SoccerTableStats'
}

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.8.2'
  assertjVersion = '3.22.0'
}

dependencies {
  testImplementation "org.assertj:assertj-core:${assertjVersion}"
  testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
  testRuntimeOnly    "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
  implementation 'com.google.code.gson:gson:2.10.1'
  implementation 'org.apache.commons:commons-lang3:3.12.0'
  testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

wrapper {
  gradleVersion = '7.3.3'
}

jar {
    manifest {
        attributes 'Main-Class': 'tech.bison.trainee2021.SoccerTableStats.SoccerTableStats'
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

task customFatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'com.baeldung.fatjar.Application'
    }
    baseName = 'all-in-one-jar'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    from { configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}